fix: react collapse animation

--- a/style/web/components/menu/_index.less
+++ b/style/web/components/menu/_index.less
@@ -300,6 +300,12 @@ a.@{prefix}-menu__item {
     }
   }
 
+  .@{prefix}-slide-down-enter-active {
+    .@{prefix}-menu__sub {
+      height: 100%;
+    }
+  }
+
   .@{prefix}-menu__item {
     position: relative;
     margin: @comp-margin-xs 0;
